--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -684,7 +684,7 @@
                 </tr>
                 <tr>
                     <td>出力</td>
-                    <td>Gmail送信（週次レポート）+ Chat DM通知</td>
+                    <td>Chat DM通知（週次レポート） ※外部送信は未対応</td>
                 </tr>
             </table>
         </section>
@@ -1081,7 +1081,7 @@ Output:
                     <div class="step-number">4</div>
                     <div class="step-content">
                         <h3>Weekly Summary Agent 作成</h3>
-                        <p>Create Agent → Schedule: Friday 18:00 → Data Source: 今週の提出ログ → Process: Gemini分析 → Output: Chat週次レポート</p>
+                        <p>Create Agent → Schedule: Friday 18:00 → Data Source: 今週の提出ログ → Process: Gemini分析 → Output: Chat DM週次レポート（自分宛） ※外部送信は未対応</p>
                     </div>
                 </div>
                 <div class="step-item">
@@ -1194,7 +1194,7 @@ Output:
                         <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
                         <polyline points="22 4 12 14.01 9 11.01"/>
                     </svg>
-                    <span>Chatアラートが正しいスペースに送信されているか</span>
+                    <span>Chat DMアラートが自分に送信されているか</span>
                 </div>
                 <div class="checklist-item">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
