--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson5.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson5.html
@@ -861,10 +861,43 @@
             <div class="section-header">
                 <div class="section-label">Goal</div>
                 <h2 class="section-title">学習目標</h2>
+                <p class="section-description">以下のプロンプトをコピーして、<a href="https://studio.workspace.google.com/" target="_blank" style="color: var(--accent-primary); text-decoration: underline;">Google Workspace Studio</a> で実行すると、このレッスンのエージェントを自動生成できます。</p>
             </div>
-            <div class="goal-card">
-                承認ワークフローを自動化し、申請内容の分類・ルーティング・監視・結果処理を実装。
-                8つのエージェントによるゼロタッチマネジメントを完成させ、管理業務70%削減を実現する
+            <div class="code-block-wrapper">
+                <div class="copy-hint">クリックでコピー</div>
+                <div class="code-block" onclick="copyToClipboard(this)">承認ワークフロー用の2つのエージェントを作成してください。
+
+【エージェント1: Approval Request Agent】
+- 名前: 承認依頼
+- スターター: Gmail（件名に「申請」「稟議」を含む）または Forms
+- 処理フロー:
+  1. Geminiステップで申請を分類:
+     - 種類: 経費申請/稟議/休暇申請
+     - 金額（該当する場合）
+     - 緊急度: 通常/急ぎ/緊急
+  2. 条件分岐で承認者を決定:
+     - 経費 < 50,000円 → 直属上長
+     - 経費 >= 50,000円 → 部門長
+     - 稟議 < 500,000円 → 部門長
+     - 稟議 >= 500,000円 → 部門長 → 経営層
+     - 休暇 → 直属上長
+  3. Chat DMで自分に承認依頼内容を通知
+  4. Sheetsに承認管理レコードを追加
+
+【エージェント2: Approval Monitor Agent】
+- 名前: 承認監視
+- スターター: Scheduled（毎日10:00、15:00）
+- 処理フロー:
+  1. Sheetsから承認待ちリストを読み込み
+  2. Geminiで経過時間と緊急度を判定:
+     - リマインド閾値超過（24h/48h）→ リマインド対象
+     - エスカレーション閾値超過（48h/72h）→ エスカレーション対象
+  3. Chat DMでリマインド/エスカレーション対象を自分に通知
+
+これらのエージェントを作成してください。</div>
+            </div>
+            <div class="warning-box" style="margin-top: 1rem;">
+                <p><strong>ポイント:</strong> 上記プロンプトをコピーして <a href="https://studio.workspace.google.com/" target="_blank" style="color: #78350f; text-decoration: underline;">Google Workspace Studio</a> に貼り付けると、エージェントのベースが自動生成されます。</p>
             </div>
         </div>
     </section>
